// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Render items 1`] = `
<DocumentFragment>
  <div
    class="itemsContainer"
  >
    <ul
      class="items light"
    />
  </div>
</DocumentFragment>
`;

exports[`Render items with children 1`] = `
<DocumentFragment>
  <div
    class="itemsContainer"
  >
    <ul
      class="items light"
    >
      <li>
        <button
          class="button light"
          type="button"
        >
          <span
            class="label"
          >
            Test
          </span>
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
